--- a/Python Notebooks/03. NumPy and SciPy basics.ipynb
+++ b/Python Notebooks/03. NumPy and SciPy basics.ipynb
@@ -195,15 +195,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "arr = np.arange(30)\n",
-    "is_two = arr%2 == 0\n",
-    "is_three = arr%3 == 0\n",
-    "is_five = arr%5 == 0\n",
-    "\n",
-    "mlist = [is_two, is_three, is_five]\n",
-    "\n",
     "def bor(ls):\n",
     "    condition=np.arange(30)\n",
     "    condition.fill(0)\n",
@@ -213,44 +204,6 @@
     "                condition[i]=1\n",
     "    return condition\n",
     "\n",
-    "print(is_two*1)\n",
-    "print(is_three*1)\n",
-    "print(is_five*1)\n",
-    "print(bor(mlist))\n",
-    "                \n",
-    "                \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1\n",
-      " 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      "[1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1\n",
-      " 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0 1 0 0]\n",
-      "[1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0\n",
-      " 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "arr = np.arange(60)\n",
-    "is_two = arr%2 == 0\n",
-    "is_three = arr%3 == 0\n",
-    "is_five = arr%5 == 0\n",
-    "\n",
-    "mlist = [is_two, is_three, is_five]\n",
-    "\n",
     "def band(ls):\n",
     "    condition=np.arange(60)\n",
     "    condition.fill(1)\n",
@@ -258,13 +211,7 @@
     "        for carr in ls:\n",
     "            if carr[i]==0:\n",
     "                condition[i]=0\n",
-    "    return condition\n",
-    "\n",
-    "print(is_two*1)\n",
-    "print(is_three*1)\n",
-    "print(is_five*1)\n",
-    "print(band(mlist))\n",
-    "                "
+    "    return condition"
    ]
   },
   {
@@ -284,11 +231,14 @@
     }
    ],
    "source": [
-    "#Exercise 2\n",
+    "# Exercise 2 Solution\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "marray = np.ndarray([4,8])\n",
+    "X = 4\n",
+    "Y = 8\n",
+    "\n",
+    "marray = np.ndarray([X,Y])\n",
     "\n",
     "for i in range(marray.shape[0]):\n",
     "    for j in range(marray.shape[1]):\n",
@@ -300,10 +250,12 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#Exercise 3\n",
+    "# Exercise 3 Solution\n",
     "\n",
     "from matplotlib.colors import LogNorm\n",
     "import matplotlib.pyplot as plt\n",
@@ -341,7 +293,7 @@
     }
    ],
    "source": [
-    "#Exercise 4\n",
+    "# Exercise 4 Solution\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -356,76 +308,6 @@
     "        arr = arr[is_coprime]\n",
     "    \n",
     "print(primes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.27631239  0.08536108  1.6901549   0.88861965 -0.03634583  1.06556724\n",
-      "  1.3652261  -1.49673773 -0.48553124 -0.79772738 -0.76025134  2.64103459\n",
-      " -1.79407916  1.57244193  2.09373457  1.41938966  0.27255908  1.75575293\n",
-      " -0.43953305 -1.69637116  0.90155888  0.27646154 -0.78171695  1.45757156\n",
-      "  1.59027922  0.60919107  1.72896884  0.57794291 -0.8668053   0.67252599\n",
-      "  1.70213761 -0.27575088  0.16542461 -1.29085528 -1.33141528  0.51227722\n",
-      " -0.95795231  1.04797354  1.60070886 -0.10302578  1.08124661 -0.34744638\n",
-      " -1.72399643 -0.03399855  0.15719831 -1.33365313 -0.01294738  0.16905265\n",
-      " -0.6530314   2.21648997  2.14785722 -0.22134651  0.53973688 -0.87367505\n",
-      "  1.87807135  0.6522814   0.65630554 -0.67302292  1.63615009  0.73284346\n",
-      "  0.13382904  1.85915159 -1.37622445  0.97762738  0.2262762  -0.39973755\n",
-      " -1.14974746 -1.49233684 -0.7465381   1.46663167  1.13855129  0.7216774\n",
-      " -0.54961656 -0.37238401 -0.34403215  1.28434845  0.63561709 -0.52899821\n",
-      " -0.35809656  0.75199035  0.67694122 -0.27193564  0.49863112  0.64730182\n",
-      "  1.38511902  0.08695765 -0.57680166 -1.80261812  0.69993803  0.6723943\n",
-      "  0.20782706 -0.62149921 -0.841957   -0.76282494 -0.83260245 -1.81861465\n",
-      " -1.08217245 -0.01849348  1.0427454   0.91891431]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "print(np.random.randn(100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1.8037604 ,  1.9797056 , -0.11104845],\n",
-       "       [-2.30568632, -0.33805288, -0.17024923],\n",
-       "       [ 1.44654806,  0.16460886, -0.6833319 ],\n",
-       "       [-0.47898826, -1.08868133,  0.37095317],\n",
-       "       [ 0.73271976,  0.88327063,  0.6428354 ],\n",
-       "       [ 0.9462552 , -0.92551678,  0.15696999],\n",
-       "       [ 0.12011212,  0.35512276,  0.72902347]])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "randn(7,3)"
    ]
   },
   {
